name:          bytestring-buildable
version:       0.1
synopsis:      Default ASCII Builders
description:
    'Buildable' provides a 'build' method to make 'Builder's with 7-bit ASCII
    encoding.
    .
    Currently there are instances for numbers and both lazy and strict
    'ByteString's. 'Char' and 'String' are deliberately omitted to avoid
    accidental truncation of Unicode 'Char's.
    .
    To make builders with other encodings check the 'builder' functions in
    'bytestring' or 'buildable' packages.
homepage:      https://github.com/jdnavarro/bytestring-buildable
license:       BSD3
license-file:  LICENSE
author:        Danny Navarro
maintainer:    j@dannynavarro.net
category:      Data
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: git://github.com/jdnavarro/bytestring-buildable

library
  exposed-modules:   Data.ByteString.Buildable
  build-depends:     base >=4.7 && <5,
                     bytestring >= 0.10.2.0
  default-language:  Haskell2010
